fixed dark mode switcher

--- a/public/stylesheets/stylesheets/mainStyle.css
+++ b/public/stylesheets/stylesheets/mainStyle.css
@@ -360,7 +360,7 @@ body h1 {
   position: absolute;
 }
 
-.label {
+.label-switch {
   background-color: #111;
   border-radius: 50px;
   cursor: pointer;
@@ -372,10 +372,9 @@ body h1 {
   position: relative;
   height: 26px;
   width: 50px;
-  transform: scale(1.3);
 }
 
-.label .ball {
+.label-switch .ball {
   background-color: #fff;
   border-radius: 50%;
   position: absolute;
@@ -384,10 +383,10 @@ body h1 {
   height: 20px;
   width: 20px;
   transform: translateX(0px);
-  transition: transform 0.2s linear;
+  transition: transform 0.1s linear;
 }
 
-.checkbox:checked+.label .ball {
+.checkbox:checked+.label-switch .ball {
   transform: translateX(24px);
 }
 
