--- a/public/stylesheets/stylesheets/postStyle.css
+++ b/public/stylesheets/stylesheets/postStyle.css
@@ -433,7 +433,7 @@ pre, code {
     position: absolute;
 }
 
-.label {
+.label-switch {
     background-color: #111;
     border-radius: 50px;
     cursor: pointer;
@@ -445,10 +445,9 @@ pre, code {
     position: relative;
     height: 26px;
     width: 50px;
-    transform: scale(1.3);
 }
 
-.label .ball {
+.label-switch .ball {
     background-color: #fff;
     border-radius: 50%;
     position: absolute;
@@ -457,10 +456,10 @@ pre, code {
     height: 20px;
     width: 20px;
     transform: translateX(0px);
-    transition: transform 0.2s linear;
+    transition: transform 0.1s linear;
 }
 
-.checkbox:checked+.label .ball {
+.checkbox:checked+.label-switch .ball {
     transform: translateX(24px);
 }
 
